# purr

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: python-publish.yml
docs/: ARD.md  PLAN-advanced-demo.md  PRD.md  TDD.md
examples/advanced-demo/: README.md  bengal.toml  purr.yaml
examples/advanced-demo/content/: _index.md
examples/advanced-demo/content/docs/: _index.md  api-reference.md  getting-started.md
examples/advanced-demo/content/premium/: _index.md  advanced-tutorials.md  deep-dives.md
examples/advanced-demo/routes/: __init__.py  auth.py  contact.py  dashboard.py  logout.py  search.py  thank_you.py
examples/advanced-demo/templates/: base.html  contact.html  dashboard.html  index.html  login.html  page.html  search.html  thank_you.html
site/: bengal.toml
site/content/: _index.md
site/content/docs/: _index.md  getting-started.md  reactive-pipeline.md
site/content/docs/about/: _index.md  ecosystem.md
site/routes/: health.py
src/purr/: __init__.py  _cli.py  _errors.py  _types.py  app.py  banner.py  config.py  config_loader.py
src/purr/content/: __init__.py  differ.py  router.py  watcher.py
src/purr/export/: __init__.py  assets.py  sitemap.py  static.py
src/purr/observability/: __init__.py  collector.py  events.py  log.py  profiler.py
src/purr/reactive/: __init__.py  broadcaster.py  error_overlay.py  graph.py  hmr.py  mapper.py  pipeline.py
src/purr/routes/: __init__.py  loader.py
src/purr/theme/: __init__.py
src/purr/theme/default/assets/css/: purr.css  tokens.css
src/purr/theme/default/assets/js/: purr.js
src/purr/theme/default/templates/: 404.html  base.html  index.html  page.html
tests/: conftest.py  test_app_integration.py  test_asset_export.py  test_auth.py  test_banner.py  test_broadcaster.py  test_build_integration.py  test_cli.py  test_config.py  test_content_router.py  test_differ.py  test_dynamic_routes_integration.py  test_error_overlay.py  test_errors.py  test_graph.py  test_hmr.py  test_mapper.py  test_observability.py  test_package.py  test_pipeline.py  test_profiler.py  test_route_loader.py  test_site_context.py  test_sitemap.py  test_sse_endpoint.py  test_static_exporter.py  test_theme.py  test_watcher.py
